src: add python3-pip to installed packages
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/roles/install_docker/tasks/main.yml
+++ b/roles/install_docker/tasks/main.yml
@@ -12,6 +12,7 @@
       - ca-certificates
       - curl
       - gnupg-agent
+      - python3-pip
       - software-properties-common
     state: latest
 
