--- a/sadm.yml
+++ b/sadm.yml
@@ -4,8 +4,11 @@
 - name: Deploy whole infrastructure
   hosts: server
   gather_facts: false
+  vars_files:
+    - vaulted_vars/secrets
   roles:
   - role: setup_sshd
   - role: install_docker
   - role: create_directories
   - role: create_networks
+  - role: start_traefik
