jupyter: change default image for spawner
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/roles/start_jupyterhub/tasks/main.yml
+++ b/roles/start_jupyterhub/tasks/main.yml
@@ -21,6 +21,7 @@
     detach: true
     env:
       ADMIN_USER: '{{ jupyterhub.admin_user }}'
+      DEFAULT_IMAGE: '{{ jupyterhub.default_image }}'
       GITLAB_URL: 'https://gitlab.{{ tld }}'
       HUB_CONNECT_IP: '{{ containers.jupyterhub.name }}'
       NETWORK_NAME: '{{ default_network }}'
