src: remove volumes.default in host_vars/server
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/roles/create_directories/tasks/main.yml
+++ b/roles/create_directories/tasks/main.yml
@@ -4,25 +4,25 @@
   file:
     path: '{{ base_dir }}{{ generated_dir }}{{ item.path }}'
     state: directory
-    owner: '{{ item.owner | default(volumes.default.owner, true) }}'
-    group: '{{ item.group | default(volumes.default.group, true) }}'
-    mode: '{{ item.mode | default(volumes.default.mode, true) }}'
+    owner: '{{ item.owner | default("root", true) }}'
+    group: '{{ item.group | default("root", true) }}'
+    mode: '{{ item.mode | default("0700", true) }}'
   loop: '{{ volumes.generated }}'
 
 - name: Create directories for persistent files
   file:
     path: '{{ base_dir }}{{ persistent_dir }}{{ item.path }}'
     state: directory
-    owner: '{{ item.owner | default(volumes.default.owner, true) }}'
-    group: '{{ item.group | default(volumes.default.group, true) }}'
-    mode: '{{ item.mode | default(volumes.default.mode, true) }}'
+    owner: '{{ item.owner | default("root", true) }}'
+    group: '{{ item.group | default("root", true) }}'
+    mode: '{{ item.mode | default("0700", true) }}'
   loop: '{{ volumes.persistent }}'
 
 - name: Create directories for volatile files
   file:
     path: '{{ base_dir }}{{ volatile_dir }}{{ item.path }}'
     state: directory
-    owner: '{{ item.owner | default(volumes.default.owner, true) }}'
-    group: '{{ item.group | default(volumes.default.group, true) }}'
-    mode: '{{ item.mode | default(volumes.default.mode, true) }}'
+    owner: '{{ item.owner | default("root", true) }}'
+    group: '{{ item.group | default("root", true) }}'
+    mode: '{{ item.mode | default("0700", true) }}'
   loop: '{{ volumes.volatile }}'
