secrets: rework secrets file layout
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/roles/start_jupyterhub/tasks/main.yml
+++ b/roles/start_jupyterhub/tasks/main.yml
@@ -26,8 +26,8 @@
       HUB_CONNECT_IP: '{{ containers.jupyterhub.name }}'
       NETWORK_NAME: '{{ default_network }}'
       OAUTH_CALLBACK_URL: 'https://jupyterhub.{{ tld }}/hub/oauth_callback'
-      OAUTH_CLIENT_ID: '{{ secrets.jupyterhub.app_id }}'
-      OAUTH_CLIENT_SECRET: '{{ secrets.jupyterhub.secret }}'
+      OAUTH_CLIENT_ID: '{{ secrets.jupyterhub.client_id }}'
+      OAUTH_CLIENT_SECRET: '{{ secrets.jupyterhub.client_secret }}'
       USER_HOME_DIR: '{{ base_dir }}{{ persistent_dir }}/jupyterhub/data'
     hostname: '{{ containers.jupyterhub.name }}'
     image: '{{ containers.jupyterhub.image }}'
