--- a/roles/start_traefik/handlers/main.yml
+++ b/roles/start_traefik/handlers/main.yml
@@ -2,7 +2,7 @@
 
 - name: Restart Traefik container
   community.general.docker_container:
-    name: '{{ containers.traefik.name }}'
+    name: '{{ services.containers.traefik.name }}'
     state: started
     restart: true
     container_default_behavior: 'no_defaults'
