wireguard: fix typo in handler notification
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/roles/start_wireguard/handlers/main.yml
+++ b/roles/start_wireguard/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Restart Wireguard container
+- name: Restart WireGuard container
   community.general.docker_container:
     name: '{{ services.containers.wireguard.name }}'
     state: started
