--- a/roles/start_files/tasks/main.yml
+++ b/roles/start_files/tasks/main.yml
@@ -20,6 +20,8 @@
     detach: true
     hostname: '{{ services.containers.files.name }}'
     image: '{{ services.containers.files.image }}'
+    log_driver: '{{ services.log.driver }}'
+    log_options: '{{ services.log.options }}'
     mounts:
       - type: bind
         source: "{{ services.volumes.src.base }}\
