--- a/roles/start_matrix/tasks/main.yml
+++ b/roles/start_matrix/tasks/main.yml
@@ -31,6 +31,8 @@
       TZ: 'Europe/Paris'
     hostname: '{{ services.containers.synapse.name }}'
     image: '{{ services.containers.synapse.image }}'
+    log_driver: '{{ services.log.driver }}'
+    log_options: '{{ services.log.options }}'
     mounts:
       - type: bind
         source: "{{ services.volumes.src.base }}\
@@ -88,6 +90,8 @@
     detach: true
     hostname: '{{ services.containers.synapse_federation.name }}'
     image: '{{ services.containers.synapse_federation.image }}'
+    log_driver: '{{ services.log.driver }}'
+    log_options: '{{ services.log.options }}'
     mounts:
       - type: bind
         source: "{{ services.volumes.src.base }}\
