--- a/roles/start_paste/tasks/main.yml
+++ b/roles/start_paste/tasks/main.yml
@@ -20,6 +20,8 @@
       PHP_TZ: 'Europe/Paris'
     hostname: '{{ services.containers.paste.name }}'
     image: '{{ services.containers.paste.image }}'
+    log_driver: '{{ services.log.driver }}'
+    log_options: '{{ services.log.options }}'
     mounts:
       - type: bind
         source: "{{ services.volumes.src.base }}\
