--- a/roles/start_traefik/tasks/main.yml
+++ b/roles/start_traefik/tasks/main.yml
@@ -43,6 +43,8 @@
     detach: true
     hostname: '{{ services.containers.traefik.name }}'
     image: '{{ services.containers.traefik.image }}'
+    log_driver: '{{ services.log.driver }}'
+    log_options: '{{ services.log.options }}'
     mounts:
       - type: bind
         source: "{{ services.volumes.src.base }}\
