--- a/roles/start_wireguard/tasks/main.yml
+++ b/roles/start_wireguard/tasks/main.yml
@@ -50,6 +50,8 @@
     detach: true
     hostname: '{{ services.containers.wireguard.name }}'
     image: '{{ services.containers.wireguard.image }}'
+    log_driver: '{{ services.log.driver }}'
+    log_options: '{{ services.log.options }}'
     mounts:
       - type: bind
         source: "{{ services.volumes.src.base }}\
