--- a/roles/start_matrix/tasks/main.yml
+++ b/roles/start_matrix/tasks/main.yml
@@ -108,3 +108,29 @@
     pull: true
     purge_networks: true
     restart_policy: unless-stopped
+
+- name: Generate Element's dynamic Traefik configuration
+  template:
+    src: 'element.toml.j2'
+    dest: "{{ services.volumes.src.base }}\
+           {{ services.volumes.src.generated }}\
+           {{ services.containers.traefik.volumes.dynamic.path }}/element.toml"
+    mode: '0444'
+
+- name: Start Element web container
+  community.general.docker_container:
+    container_default_behavior: 'no_defaults'
+    detach: true
+    hostname: '{{ services.containers.element.name }}'
+    image: '{{ services.containers.element.image }}'
+    log_driver: '{{ services.log.driver }}'
+    log_options: '{{ services.log.options }}'
+    name: '{{ services.containers.element.name }}'
+    networks:
+      - name: '{{ services.network }}'
+        aliases:
+          - '{{ services.containers.element.name }}'
+    networks_cli_compatible: false
+    pull: true
+    purge_networks: true
+    restart_policy: unless-stopped
